// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks for invalid password 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <p
      className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary"
    >
      To protect against unauthorized changes to your account,
we require users to create a password.
    </p>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="SetPasswordField-description"
      >
        Must be at least 8 characters
      </div>
      <div
        className="PasswordField-fullWidth PasswordField-root"
      >
        <div
          className="PasswordField-wrapper"
        >
          <input
            autoCapitalize="off"
            autoComplete="off"
            autoCorrect="off"
            className="PasswordField-colorError PasswordField-fullWidth PasswordField-input"
            data-testid="password-field"
            disabled={false}
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Password"
            spellCheck={false}
            type="password"
            value="x"
          />
          <div
            className="PasswordField-icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={0}
            title="Hide password"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm"
            >
              visibility
            </i>
          </div>
        </div>
      </div>
      <div
        className="ValidationMessage-root"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignCenter"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm ValidationMessage-icon"
          >
            error
          </i>
          <span>
            Password must contain at least 8 characters.
          </span>
        </div>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorPrimary Button-variantFilled Button-fullWidth"
      data-color="primary"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create Password
    </button>
  </div>
</form>
`;

exports[`renders createPassword view 1`] = `
<div>
  <div>
    <div
      data-testid="createPassword-container"
    >
      <div
        className="Box-root Flex-root Bar-root Flex-flex Flex-justifyCenter Flex-alignCenter"
      >
        <header>
          <h1
            className="Box-root Typography-root Typography-heading2 Typography-colorTextPrimary Typography-alignCenter Title-root"
          >
            Create Password
          </h1>
        </header>
      </div>
      <main
        className="Main-root"
        data-testid="createPassword-main"
      >
        <form
          autoComplete="off"
          onSubmit={[Function]}
        >
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <p
              className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary"
            >
              To protect against unauthorized changes to your account,
we require users to create a password.
            </p>
            <div
              className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
            >
              <label
                className="InputLabel-root"
                htmlFor="password"
              >
                Password
              </label>
              <div
                className="SetPasswordField-description"
              >
                Must be at least 8 characters
              </div>
              <div
                className="PasswordField-fullWidth PasswordField-root"
              >
                <div
                  className="PasswordField-wrapper"
                >
                  <input
                    autoCapitalize="off"
                    autoComplete="off"
                    autoCorrect="off"
                    className="PasswordField-colorRegular PasswordField-fullWidth PasswordField-input"
                    data-testid="password-field"
                    disabled={false}
                    id="password"
                    name="password"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Password"
                    spellCheck={false}
                    type="password"
                    value=""
                  />
                  <div
                    className="PasswordField-icon"
                    onClick={[Function]}
                    onKeyUp={[Function]}
                    role="button"
                    tabIndex={0}
                    title="Hide password"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm"
                    >
                      visibility
                    </i>
                  </div>
                </div>
              </div>
            </div>
            <button
              className="BaseButton-root Button-root Button-sizeLarge Button-colorPrimary Button-variantFilled Button-fullWidth"
              data-color="primary"
              data-variant="filled"
              disabled={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="submit"
            >
              Create Password
            </button>
          </div>
        </form>
      </main>
    </div>
  </div>
</div>
`;

exports[`shows error when submitting empty form 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <p
      className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary"
    >
      To protect against unauthorized changes to your account,
we require users to create a password.
    </p>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="SetPasswordField-description"
      >
        Must be at least 8 characters
      </div>
      <div
        className="PasswordField-fullWidth PasswordField-root"
      >
        <div
          className="PasswordField-wrapper"
        >
          <input
            autoCapitalize="off"
            autoComplete="off"
            autoCorrect="off"
            className="PasswordField-colorError PasswordField-fullWidth PasswordField-input"
            data-testid="password-field"
            disabled={false}
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Password"
            spellCheck={false}
            type="password"
            value=""
          />
          <div
            className="PasswordField-icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={0}
            title="Hide password"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm"
            >
              visibility
            </i>
          </div>
        </div>
      </div>
      <div
        className="ValidationMessage-root"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignCenter"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm ValidationMessage-icon"
          >
            error
          </i>
          <span>
            This field is required.
          </span>
        </div>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorPrimary Button-variantFilled Button-fullWidth"
      data-color="primary"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create Password
    </button>
  </div>
</form>
`;

exports[`shows server error 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <p
      className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary"
    >
      To protect against unauthorized changes to your account,
we require users to create a password.
    </p>
    <div
      className="CallOut-root CallOut-colorError CallOut-fullWidth"
    >
      <div
        className="CallOut-inner"
      >
        server error

GraphQL request:4:3
3 | ) {
4 |   setPassword(input: $input) {
  |   ^
5 |     user {
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="SetPasswordField-description"
      >
        Must be at least 8 characters
      </div>
      <div
        className="PasswordField-fullWidth PasswordField-root"
      >
        <div
          className="PasswordField-wrapper"
        >
          <input
            autoCapitalize="off"
            autoComplete="off"
            autoCorrect="off"
            className="PasswordField-colorRegular PasswordField-fullWidth PasswordField-input"
            data-testid="password-field"
            disabled={false}
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Password"
            spellCheck={false}
            type="password"
            value="secretpassword"
          />
          <div
            className="PasswordField-icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={0}
            title="Hide password"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm"
            >
              visibility
            </i>
          </div>
        </div>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorPrimary Button-variantFilled Button-fullWidth"
      data-color="primary"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create Password
    </button>
  </div>
</form>
`;

exports[`successfully sets password 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <p
      className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary"
    >
      To protect against unauthorized changes to your account,
we require users to create a password.
    </p>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="SetPasswordField-description"
      >
        Must be at least 8 characters
      </div>
      <div
        className="PasswordField-fullWidth PasswordField-root"
      >
        <div
          className="PasswordField-wrapper"
        >
          <input
            autoCapitalize="off"
            autoComplete="off"
            autoCorrect="off"
            className="PasswordField-colorRegular PasswordField-fullWidth PasswordField-input"
            data-testid="password-field"
            disabled={false}
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Password"
            spellCheck={false}
            type="password"
            value="secretpassword"
          />
          <div
            className="PasswordField-icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={0}
            title="Hide password"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm"
            >
              visibility
            </i>
          </div>
        </div>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorPrimary Button-variantFilled Button-fullWidth"
      data-color="primary"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create Password
    </button>
  </div>
</form>
`;
